# bento_service_registry

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  dev.Dockerfile  entrypoint.bash  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.txt  run.bash  run.dev.bash  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  test.yml
bento_service_registry/: app.py  authz.py  authz_header.py  bento_services_json.py  config.py  constants.py  data_types.py  http_session.py  logger.py  models.py  package.cfg  routes.py  service_info.py  services.py  types.py  utils.py  workflows.py
chord_service_registry/: __init__.py  app.py  db.py  package.cfg  schema.sql
tests/: bento_services.json  chord_services.json  conftest.py  test_api.py
