[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_service_registry"
version = "1.4.2"
description = "An implementation of GA4GH Service Registry API for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_service_registry"}]
repository = "https://github.com/bento-platform/bento_service_registry"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
aiodns = "^3.2.0"
aiofiles = "^24.1.0"
aiohttp = "^3.9.5"
bento-lib = {extras = ["fastapi"], version = "^12.2.2"}
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.2.1"
orjson = "^3.10.1"
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
debugpy = "^1.8.1"
flake8 = "^7.0.0"
httpx = "^0.27.0"
mypy = "~1.10.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.6"
pytest-cov = "^4.1.0"
tox = "^4.15.0"
types-aiofiles = "^23.2.0"
black = "^24.4.2"

[tool.black]
line_length = 120
