[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_service_registry"
version = "1.5.4"
description = "An implementation of GA4GH Service Registry API for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_service_registry"}]
repository = "https://github.com/bento-platform/bento_service_registry"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.12.0"
aiodns = "^4.0.0"
aiofiles = "^25.1.0"
aiohttp = "^3.13.3"
bento-lib = {extras = ["fastapi"], version = "^14.1.2"}
fastapi = {extras = ["standard"], version = "^0.128.2"}
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
orjson = "^3.11.7"
async-lru = "^2.0.5"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.11.0"
debugpy = "^1.8.20"
httpx = "^0.28.1"
mypy = "~1.19.1"
pytest = "^9.0.1"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
tox = "^4.32.0"
types-aiofiles = "^25.1.0"

[tool.ruff]
line-length = 120
